[package]
name = "quantity"
version = "0.8.0"
authors = [
    "Philipp Rehner <prehner@ethz.ch>",
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
]
rust-version = "1.81"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Representation of quantites, i.e. of unit valued scalars and arrays."
homepage = "https://github.com/itt-ustutt/quantity"
readme = "README.md"
repository = "https://github.com/itt-ustutt/quantity"
keywords = ["physics", "units", "SI"]
categories = ["data-structures", "science"]
exclude = ["/.github/*", "*.ipynb", "/docs"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]

[dependencies]
ndarray = { version = "0.15", features = ["approx-0_5"] }
approx = "0.5"
num-traits = "0.2"
typenum = "1.17"
pyo3 = { version = "0.21", optional = true }
numpy = { version = "0.21", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]
