[package]
name = "si-units"
version = "0.10.0"
authors = [
    "Philipp Rehner <prehner@ethz.ch>",
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
]
rust-version = "1.81"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Representation of SI unit valued scalars and arrays."
homepage = "https://github.com/itt-ustutt/quantity/tree/master/si-units"
readme = "README.md"
repository = "https://github.com/itt-ustutt/quantity"
keywords = ["physics", "units", "SI"]
categories = ["data-structures", "science"]
exclude = ["*.ipynb", "/docs"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16"
numpy = "0.23"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
regex = "1.11"
thiserror = "2.0"
