[package]
name = "si-units"
version = "0.11.0"
authors = [
    "Philipp Rehner <prehner@ethz.ch>",
    "Gernot Bauer <bauer@itt.uni-stuttgart.de>",
]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Representation of SI unit valued scalars and arrays."
homepage = "https://github.com/itt-ustutt/quantity/tree/master/si-units"
readme = "README.md"
repository = "https://github.com/itt-ustutt/quantity"
keywords = ["physics", "units", "SI"]
categories = ["data-structures", "science"]
exclude = ["*.ipynb", "/docs"]

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.17"
numpy = "0.27"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
regex = "1.12"
thiserror = "2.0"
