[package]
name = "extend_quantity"
version = "0.1.0"
edition = "2021"

[lib]
name = "extend_quantity"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py39"] }
quantity = { version = "*", path = "../../", features = ["python"] }
ang = "0.6"
ndarray = "0.15"
typenum = "1.0"
once_cell = "1.0"
num-traits = "0.2"
approx = "0.5"
thiserror = "1.0"
